--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kstost/ksttool/Geometry.js"></script>
-    <script src="./kokacP5Ext.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/kstost/KokacP5Ext/src/kokacP5Ext.js"></script>
     <script src="./logic.js"></script>
     <style>
       body {
@@ -17,6 +17,5 @@
     </style>
   </head>
   <body>
-    <main id="stg"></main>
   </body>
 </html>
